# cpp-classifier

./: .gitignore  CLAUDE.md  CMakeLists.txt
classifier/: CMakeLists.txt
classifier/include/classifier/: classifier.h  math.h  model.h  trainer.h
classifier/src/: classifier.cpp  math.cpp  model.cpp
demo/: CMakeLists.txt
demo/src/: main.cpp
test/: CMakeLists.txt
test/src/: test_classifier.cpp
tests/: CMakeLists.txt
tests/src/: test_classifier.cpp
trainer/: CMakeLists.txt
trainer/include/trainer/: trainer.h
trainer/src/: main.cpp
